[tool.poetry]
name = "hana"
version = "0.1.0"
description = "A modern hitomi viewer."
authors = ["SSerVe <personal@sserve.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.3"
django-constance = {extras = ["database"], version = "2.9.1"}
django-picklefield = "3.1"
requests = "2.28.1"
beautifulsoup4 = "4.11.1"
urllib3 = "1.26.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
